// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`display-names-prod > bundler: vite > build > should create build output 1`] = `
{
  "index.html": SCRIPTS: [
    "/vite-client-8QWWB4Jk.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[0]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <div>
        <h1>
          Display Names Test
        </h1>
        <button>
          Click me
        </button>
        <div>
          This is a card
        </div>
        <input>
        <footer>
          Footer content
        </footer>
        <div id="display-names-test">
          <p>
            Components should have displayName in production build:
          </p>
          <ul>
            <li>
              Button.displayName:
              Button
            </li>
            <li>
              Card.displayName:
              Card
            </li>
            <li>
              Header.displayName:
              Header
            </li>
            <li>
              MemoFooter.displayName:
              MemoFooter
            </li>
            <li>
              Input.displayName:
              Input
            </li>
            <li>
              PublicBox.displayName:
              Box
            </li>
          </ul>
        </div>
      </div>
    </div>
    <script
      type="module"
      src="SCRIPTS[0]"
    >
    </script>
  </body>
</html>,
  "vite-client-8QWWB4Jk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vite-client-8QWWB4Jk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`display-names-prod > bundler: webpack > build > should create build output 1`] = `
{
  "767-d815cd51ea3f357594ec.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "767-d815cd51ea3f357594ec.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": SCRIPTS: [
    "/runtime-980fb1ffe39d4de310ac.js",
    "/767-d815cd51ea3f357594ec.js",
    "/main-8e262f9398b6689c1fb1.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        <h1>
          Display Names Test
        </h1>
        <button>
          Click me
        </button>
        <div>
          This is a card
        </div>
        <input>
        <footer>
          Footer content
        </footer>
        <div id="display-names-test">
          <p>
            Components should have displayName in production build:
          </p>
          <ul>
            <li>
              Button.displayName:
              Button
            </li>
            <li>
              Card.displayName:
              Card
            </li>
            <li>
              Header.displayName:
              Header
            </li>
            <li>
              MemoFooter.displayName:
              MemoFooter
            </li>
            <li>
              Input.displayName:
              Input
            </li>
            <li>
              PublicBox.displayName:
              Box
            </li>
          </ul>
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
  </body>
</html>,
  "main-8e262f9398b6689c1fb1.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-8e262f9398b6689c1fb1.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-980fb1ffe39d4de310ac.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-980fb1ffe39d4de310ac.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
